# CPP

./: xd.txt
Kolokwium1/: Bazowa.hpp  CMakeLists.txt  GrupaDziekanska.h  Pochodna.hpp  main.cpp
Lab1_ver2/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp
Lab2/: Bufor.cpp  Bufor.h  CMakeLists.txt  Developer.cpp  Developer.h  Employee.cpp  Employee.h  MaxBufor.cpp  MaxBufor.h  MeanBufor.cpp  MeanBufor.h  TeamLeader.cpp  TeamLeader.h  main.cpp
Lab3_z_dodatkowym/: Adding.cpp  Adding.h  Array.h  CMakeLists.txt  Student.cpp  Student.h  main.cpp
Lab4_dokonczone/: CMakeLists.txt  Citizen.h  City.cpp  City.h  main.cpp
Lab5/: CMakeLists.txt  Dictionary.hpp  main.cpp
